# rss-reader

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  feeds.toml
src/: config.rs  db.rs  feed.rs  main.rs  server.rs
src/tui/: mod.rs
