[package]
name = "rss_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = "0.7.9"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
html2text = "0.15.4"
open = "5.3.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.0", features = ["json"] }
rss = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
url = "2.5.7"
