[package]
name = "rss_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = "0.7.9"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
csv = "1.3.0"
hex = "0.4.3"
html2md = "0.2.14"
comrak = "0.24.1"
minimad = "0.13.1"
regex = "1.10.5"
open = "5.3.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.0", features = ["json"] }
rss = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.8"
tower-http = { version = "0.5.2", features = ["fs"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
url = "2.5.7"
